# ArtsyTiledImageDownloader

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  QUALITY_CHECKLIST.md  README.md  TEST_REPORT.md  combine_images.py  config.py  download_image.py  download_images.py  get_max_zoom_level.py  get_metadata.py  get_metadatas.py  get_script.py  image_metadata.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
artsy_tiled_image_downloader/: __init__.py  _version.py  cli.py  config.py  download.py  exceptions.py  http.py  metadata.py  models.py  paths.py  validation.py
tests/: conftest.py  test_cli.py  test_cli_system.py  test_config.py  test_download.py  test_download_api.py  test_http.py  test_live_metadata.py  test_metadata.py  test_models.py  test_packaging.py  test_paths.py  test_performance.py  test_validation.py
